# Numerical-libraries

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: 00_example_ddot.c  01_exercise_daxpy.c  01_solution_daxpy.c  02_exercise_dgemv.c  02_solution_dgemv.c  03_exercise_dgemm.c  03_solution_dgemm.c  04_exercise_cache.c  04_solution_cache.c  05_exercise_alignment.c  05_solution_alignment.c  CMakeLists.txt  example_01_ddot.c  example_execute.c  read_and_execute.c  read_matrix.c  utils.c  utils.h
